--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="./images/logo.png" alt="logo" width="30" height="24" />
+              <img src="./images/Deptos/logobgrm.png" alt="logo" width="100"/>
             </a>
             <button
               class="navbar-toggler"
@@ -93,7 +93,7 @@
                 </h1>
                 <p>Algún texto si se quiere poner</p>
                 <div class="btn-box">
-                  <a href="" class=""> Contactanos </a>
+                  <a href="https://api.whatsapp.com/send?phone=542241470235&text=Hola,%20vengo%20desde%20la%20web,%20me%20gustar%C3%ADa%20hacerte%20una%20pregunta%20acerca%20de%20los%20departamentos." class=""> Contactanos </a>
                 </div>
               </div>
             </div>
@@ -113,7 +113,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="img-box">
-              <img src="images/about-img.jpg" alt="" />
+              <img src="images/Deptos/tinyFlower.jpg" alt="" />
             </div>
           </div>
           <div class="col-md-6">
@@ -176,7 +176,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="10000">
                     <img
-                      src="./images/Deptos/1a.jpg"
+                      src="./images/Deptos/tiny1a.jpg"
                       class="d-block w-100"
                       alt=""
                     />
@@ -189,7 +189,7 @@
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
                     <img
-                      src="./images/Deptos/1b.jpg"
+                      src="./images/Deptos/tiny1b.jpg"
                       class="d-block w-100"
                       alt=""
                     />
@@ -202,7 +202,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="./images/Deptos/1c.jpg"
+                      src="./images/Deptos/tiny1c.jpg"
                       class="d-block w-100"
                       alt=""
                     />
@@ -277,7 +277,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="10000">
                     <img
-                      src="./images/Deptos/2a.jpg"
+                      src="./images/Deptos/tiny2a.jpg"
                       class="d-block w-100"
                       alt=""
                     />
@@ -290,7 +290,7 @@
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
                     <img
-                      src="./images/Deptos/2b.jpg"
+                      src="./images/Deptos/tiny2b.jpg"
                       class="d-block w-100"
                       alt=""
                     />
@@ -303,7 +303,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="./images/Deptos/2c.jpg"
+                      src="./images/Deptos/tiny2c.jpg"
                       class="d-block w-100"
                       alt=""
                     />
