--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="#inicio">Inicio</a>
+                  <a class="nav-link" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#sobreNosotros">Nosotros</a>
@@ -66,13 +66,13 @@
                   <a class="nav-link" href="#Pila">Pila</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#opiniones">Opiniones</a>
+                  <a class="nav-link" href="#opiniones">Reseñas</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#ubicación">Ubicación</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#info">+Info</a>
+                  <a class="nav-link" href="#info">Contacto</a>
                 </li>
               </ul>
             </div>
@@ -80,38 +80,58 @@
         </nav>
       </div>
     </header>
-    <div id="inicio" class="hero_area">
-      <!-- slider section -->
-      <section class="slider_section">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-4 offset-md-1">
-              <div class="detail-box">
-                <h1>
-                  <span>Departamentos</span> <br />
-                  Las Margaritas
-                </h1>
-                <p>Algún texto si se quiere poner</p>
-                <div class="btn-box">
-                  <a href="https://api.whatsapp.com/send?phone=542241470235&text=Hola,%20vengo%20desde%20la%20web,%20me%20gustar%C3%ADa%20hacerte%20una%20pregunta%20acerca%20de%20los%20departamentos." class=""> Contactanos </a>
+    
+
+    <!-- Hero Section -->
+    <section id="hero1" class="hero">
+      <div class="inner">
+        <div class="copy">
+          <h1>Departamentos Las Margaritas</h1>
+          <p>
+            Vive • Sonríe • Ama
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- End Hero Section -->
+
+    <!-- Sobre Nosotros section -->
+
+    <section id="sobreNosotros" class="about_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="detail-box">
+              <div class="container-fluid">
+                <div class="heading_container">
+                  <div class="division-title">
+                    <span>Sobre Nosotros</span>
+                    <div class="bellow-line"></div>
+                  </div>
+                  <p class="europa">
+                    Somos un complejo de departamentos rodeados de plantas y
+                    mucho verde.
+                  </p>
                 </div>
               </div>
             </div>
           </div>
+          <div class="col-md-6 img-col">
+            <div class="img-box">
+              <img src="images/Deptos/tinyFlower.jpg" alt="" />
+            </div>
+          </div>
         </div>
-      </section>
-      <!-- end slider section -->
-    </div>
-
-    <!-- about section -->
-
-    <section id="sobreNosotros" class="about_section layout_padding-bottom">
-      <div class="square-box">
-        <img src="images/square.png" alt="" />
       </div>
+    </section>
+
+    <!-- End Sobre Nosotros section -->
+
+    <!-- Lala Section -->
+    <section id="sobreNosotros" class="about_section">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 img-col">
             <div class="img-box">
               <img src="images/Deptos/tinyFlower.jpg" alt="" />
             </div>
@@ -120,10 +140,12 @@
             <div class="detail-box">
               <div class="container-fluid">
                 <div class="heading_container">
-                  <h2>Sobre nosotros</h2>
-                  <p>
-                    Somos un complejo de departamentos rodeados de plantas y
-                    mucho verde.
+                  <div class="division-title">
+                    <span>Nuestros Departamentos</span>
+                    <div class="bellow-line"></div>
+                  </div>
+                  <p class="europa">
+                    Contamos con deptos bien ambientados y lindos por dentro y por fuera.
                   </p>
                 </div>
               </div>
@@ -133,15 +155,16 @@
       </div>
     </section>
 
-    <!-- end about section -->
-
     <!-- rent section -->
 
     <section id="departamentos" class="sale_section layout_padding2-top">
       <div class="container-fluid">
         <div class="heading_container">
-          <h2>Nuestros departamentos</h2>
-          <p>Te mostramos algunas imágenes de cómo se ven por dentro</p>
+          <div class="division-title">
+            <span>Nuestros Departamentos</span>
+            <div class="background-line-60"></div>
+          </div>
+          <p class="europa">Te mostramos algunas imágenes de cómo se ven por dentro</p>
         </div>
         <div class="sale_container">
           <div class="box">
@@ -346,107 +369,7 @@
               <p>Por si se quiere poner algo de texto</p>
             </div>
           </div>
-          <div class="box">
-            <div class="img-box">
-              <div
-                id="carouselExampleDarkDepto3"
-                class="carousel slide"
-                data-bs-ride="carouselDepto3"
-              >
-                <div class="carousel-indicators">
-                  <button
-                    type="button"
-                    data-bs-target="#carouselExampleDarkDepto3"
-                    data-bs-slide-to="0"
-                    class="active"
-                    aria-current="true"
-                    aria-label="Slide 1"
-                  ></button>
-                  <button
-                    type="button"
-                    data-bs-target="#carouselExampleDarkDepto3"
-                    data-bs-slide-to="1"
-                    aria-label="Slide 2"
-                  ></button>
-                  <button
-                    type="button"
-                    data-bs-target="#carouselExampleDarkDepto3"
-                    data-bs-slide-to="2"
-                    aria-label="Slide 3"
-                  ></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active" data-bs-interval="10000">
-                    <img
-                      src="./images/Deptos/3a.jpg"
-                      class="d-block w-100"
-                      alt=""
-                    />
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>
-                        Texto para la imágen 1
-                      </p>
-                    </div>
-                  </div>
-                  <div class="carousel-item" data-bs-interval="2000">
-                    <img
-                      src="./images/Deptos/3b.jpg"
-                      class="d-block w-100"
-                      alt=""
-                    />
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>
-                        Texto para la imágen 2
-                      </p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="./images/Deptos/3c.jpg"
-                      class="d-block w-100"
-                      alt=""
-                    />
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>
-                        Texto para la imágen 3
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <button
-                  class="carousel-control-prev"
-                  type="button"
-                  data-bs-target="#carouselExampleDarkDepto3"
-                  data-bs-slide="prev"
-                >
-                  <span
-                    class="carousel-control-prev-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button
-                  class="carousel-control-next"
-                  type="button"
-                  data-bs-target="#carouselExampleDarkDepto3"
-                  data-bs-slide="next"
-                >
-                  <span
-                    class="carousel-control-next-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            </div>
-            <div class="detail-box">
-              <h6>departamento 3</h6>
-              <p>Por si se quiere poner algo de texto</p>
-            </div>
-          </div>
+          
         </div>
       </div>
     </section>
@@ -458,8 +381,11 @@
     <section id="Pila" class="us_section layout_padding2-top">
       <div class="container-fluid">
         <div class="heading_container">
-          <h2 class="mt-2">Pila</h2>
-          <p>Conocé nuestro pueblo</p>
+          <div class="division-title">
+            <span>Pila</span>
+            <div class="background-line-60"></div>
+          </div>
+          <p class="europa">Conocé nuestro pueblo</p>
         </div>
         <div
           id="imgPila"
@@ -553,108 +479,16 @@
 
     <!-- end pila section -->
 
-    <!-- deal section -->
-
-    <!-- <section class="deal_section layout_padding-bottom">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="detail-box">
-              <div class="heading_container">
-                <h2>Very Good Deal For House</h2>
-              </div>
-              <p>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable.
-              </p>
-              <a href=""> Get A Quote </a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="img-box">
-              <div class="box b1">
-                <img src="images/d-1.jpg" alt="" />
-              </div>
-              <div class="box b1">
-                <img src="images/d-2.jpg" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <!-- end deal section -->
-
-    <!-- us section -->
-    <!-- <section class="us_section layout_padding2">
-      <div class="container">
-        <div class="heading_container">
-          <h2>Por qué elegirnos</h2>
-        </div>
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/Ubicación.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h3 class="price">1000+</h3>
-                <h5>Years of House</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/u-2.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h3>20000+</h3>
-                <h5>Projects Delivered</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/u-3.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h3>10000+</h3>
-                <h5>Satisfied Customers</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/u-4.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h3>1500+</h3>
-                <h5>Cheap Rates</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="btn-box">
-          <a href=""> Get A Quote </a>
-        </div>
-      </div>
-    </section> -->
-
-    <!-- end us section -->
-
     <!-- client secction -->
 
     <section id="opiniones" class="client_section layout_padding2-top">
       <div class="container-fluid">
         <div class="heading_container">
-          <h2 class="mt-2">Opiniones</h2>
-          <p>Lo que dicen los clientes sobre nosotros</p>
+          <div class="division-title">
+            <span>Reseñas</span>
+            <div class="background-line-60"></div>
+          </div>
+          <p class="europa">Lo que dicen los clientes sobre nosotros</p>
         </div>
         <div
           id="carouselExampleLight"
@@ -753,14 +587,17 @@
     <section id="ubicación" class="us_section layout_padding2-top">
       <div class="container">
         <div class="heading_container">
-          <h2>Dónde estamos?</h2>
+          <div class="division-title">
+            <span>Cómo llegar?</span>
+            <div class="background-line-60"></div>
+          </div>
         </div>
       </div>
       <div class="container-fluid">
         <div class="d-flex justify-content-center">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3227.6521873150673!2d-58.14418968490664!3d-36.004364180120184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9598317f33140f19%3A0x871bb4c8e182e96!2sLas%20Margaritas!5e0!3m2!1ses!2sar!4v1674341717510!5m2!1ses!2sar"
-            width="600"
+            width="100%"
             height="300"
             frameborder="0"
             allowfullscreen
@@ -770,66 +607,6 @@
     </section>
 
     <!-- end contact section -->
-
-    <!-- info section -->
-    <!-- <section id="info" class="info_section">
-      <div class="container">
-        <div class="d-flex justify-content-center">
-          <div class="square">
-            <div class="info_contact">
-              <h5>Nosotros</h5>
-              <div>
-                <div class="img-box">
-                  <img src="images/location.png" width="18px" alt="" />
-                </div>
-                <p>Calle General Belgrano 479</p>
-              </div>
-              <div>
-                <div class="img-box">
-                  <img src="images/phone.png" width="12px" alt="" />
-                </div>
-                <p>+54 2241-470235</p>
-              </div>
-              <div>
-                <div class="img-box">
-                  <img src="images/mail.png" width="18px" alt="" />
-                </div>
-                <p>ezequielcolungaacha@gmail.com</p>
-              </div>
-            </div>
-          </div>
-          <div class="square">
-            <div class="info_info">
-              <h5>Información</h5>
-              <p>
-                Actualmente contamos con solo 2 departamentos debido a un
-                alquiler de largo plazo.
-              </p>
-            </div>
-          </div>
-
-          <div class="square">
-            <div class="info_form">
-              <h5>Nuestras redes</h5>
-              <div class="social_box">
-                <a href="">
-                  <img src="images/fb.png" alt="" />
-                </a>
-                <a href="">
-                  <img src="images/twitter.png" alt="" />
-                </a>
-                <a href="">
-                  <img src="images/linkedin.png" alt="" />
-                </a>
-                <a href="">
-                  <img src="images/youtube.png" alt="" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <!-- info section -->
     <section id="info" class="info_section">
@@ -877,12 +654,6 @@
                 </a>
                 <a href="">
                   <img src="images/twitter.png" alt="" />
-                </a>
-                <a href="">
-                  <img src="images/linkedin.png" alt="" />
-                </a>
-                <a href="">
-                  <img src="images/youtube.png" alt="" />
                 </a>
               </div>
             </div>
